feat: Add Python backend, enhance frontend, and configure for deployment

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,6 @@
 PERPLEXITY_API_KEY="YOUR_PERPLEXITY_API_KEY"     # Optional: Format: pplx-...
 OPENAI_API_KEY="YOUR_OPENAI_API_KEY"             # Optional, for OpenAI models. Format: sk-proj-...
 GOOGLE_API_KEY="YOUR_GOOGLE_API_KEY"             # Optional, for Google Gemini models.
+YOUTUBE_API_KEY="YOUR_YOUTUBE_API_KEY"
+YOUTUBE_CHANNEL_ID="UCxxxxxxxxxxxxxxxx"
+YOUTUBE_PLAYLIST_ID="PLxxxxxxxxxxxxxxxx"
